Fixed z-index for image and added box-shadow to image aswell

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -545,7 +545,7 @@ input[type='checkbox']:checked + span.checkbox-target:after {
     .content-detail {
       position: relative;
       background: $color-white;
-      box-shadow: 0 0 15px 0 $color-light-gray;
+      box-shadow: 0 0 2px 0 darken($color-light-gray, 10);
 
       .content-title {
         display: block;
@@ -564,7 +564,8 @@ input[type='checkbox']:checked + span.checkbox-target:after {
         img {
           position: absolute;
           width: 100%;
-          z-index: -100px;
+          box-shadow: 0 0 2px 0 darken($color-light-gray, 10);
+          z-index: -100;
         }
 
         &:hover {
@@ -579,7 +580,7 @@ input[type='checkbox']:checked + span.checkbox-target:after {
         position: absolute;
         height: 150px;
         top: 138px;
-        font-size: 15px;
+        font-size: 14px;
         font-weight: 300;
         z-index: 200px;
         background: $color-tra-white;
@@ -623,7 +624,7 @@ input[type='checkbox']:checked + span.checkbox-target:after {
       position: relative;
       height: 120px;
       background: $color-white;
-      box-shadow: 0 0 15px 0 $color-light-gray;
+      box-shadow: 0 0 2px 0 darken($color-light-gray, 10);
 
       .content-title {
         @include make-md-column(10);
